[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard,strandard]>=0.115.8",
    "pickle4>=0.0.1",
    "sentence-transformers>=3.4.1",
]

[tool.uv]
dev-dependencies = [
    "autopep8>=2.3.2",
    "isort>=6.0.0",
]
